tests/NormalTests/paczka1/fuzzy1/63132367.err
Error in line 10: BIcb A69 30,5
Error in line 17: A242 A242 50,9
Error in line 28: A242 A69 72,6
Error in line 26: 9iBop S58 64,3
Error in line 32: 9iBop A69 36,3
Error in line 31: A242 A242 57,4
Error in line 37: A242 A69 23,1
